syntax = "proto3";

package message;
option go_package = "github.com/tuarrep/sounddrop/message";

message PeerOnline {
    string id = 1;
}

message PeerOffline {
    string id = 1;
}

message WriteRequest {
    string device_name = 1;
    bytes message = 2;
}